# MOSZE_base

./: BaseUnit.cpp  BaseUnit.h  Exceptions.h  Hero.cpp  Hero.h  JSON.cpp  JSON.h  Monster.cpp  Monster.h  README.md  doxconf  good_output.txt  main.cpp  makefile  test.sh
.github/workflows/: ParserUnitTest.yml  test.yml
Docker/test/: Dockerfile
test/: CMakeLists.txt  parser_test.cpp  unit_Test1.json  unit_Test2.json
test/units/: unit_Test3.json
units/: unit1.json  unit2.json  unit3.json
